@@ -108,6 +108,7 @@ export(cEscape,
 	   as.correlation,
 	   cwm.colors,
 	   rwb.colors,
+	   rwg.colors,
 	   ryg.colors,
 	   Pi,
 	   E,
